// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppIcon > should render 1`] = `
<div>
  <div
    class="MuiBox-root css-5azvwx"
  >
    <span
      aria-hidden="true"
      class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-1btd5gz-MuiIcon-root"
    >
      code
    </span>
  </div>
</div>
`;

exports[`AppIcon > should render with question mark 1`] = `
<div>
  <div
    class="MuiBox-root css-5azvwx"
  >
    <span
      aria-hidden="true"
      class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
    >
      question_mark
    </span>
  </div>
</div>
`;
